[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/gugi-60.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.984314, 0.968627, 0.941176, 1 )

[sub_resource type="Theme" id=3]
ItemList/colors/font_color = Color( 0.756863, 0.756863, 0.756863, 1 )
ItemList/colors/font_color_selected = Color( 0, 0, 0, 1 )
ItemList/colors/guide_color = Color( 0.984314, 0.968627, 0.941176, 1 )
ItemList/styles/bg = SubResource( 2 )

[node name="MainScene" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.984314, 0.968627, 0.941176, 1 )

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Title" type="Label" parent="UI"]
margin_top = 300.0
margin_right = 576.0
margin_bottom = 384.0
rect_scale = Vector2( 0.998188, 1.00407 )
custom_colors/font_color = Color( 0, 0, 0, 0.560784 )
custom_fonts/font = SubResource( 1 )
text = "Learn 2 Do"
align = 1
valign = 1

[node name="MenuButtons" type="Node2D" parent="UI"]

[node name="StartList" type="ItemList" parent="UI/MenuButtons"]
margin_left = 57.0
margin_top = 413.0
margin_right = 532.0
margin_bottom = 771.0
theme = SubResource( 3 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.756863, 0.756863, 0.756863, 1 )
custom_fonts/font = ExtResource( 2 )
items = [ "Start", null, false, "Settings", null, false, "Quit", null, false ]

[node name="Score" type="Node2D" parent="."]

[node name="Buttons" type="Node2D" parent="."]

[connection signal="item_selected" from="UI/MenuButtons/StartList" to="UI" method="_on_StartList_item_selected"]
